fix(styles): fix broken styles

--- a/mirrorgate-dashboard/src/sass/_general.scss
+++ b/mirrorgate-dashboard/src/sass/_general.scss
@@ -121,20 +121,22 @@ tile-container{
         display: flex;
         //need to interpolate the $header-footer-height in order to have it print out the px there
         height: calc(100vh - #{$header-height});
+        height: -moz-calc(100vh - #{$header-height});
+        height: -webkit-calc(100vh - #{$header-height});
         padding: 5px;
-
 
         &.with-footer {
           height: calc(100vh - #{$header-footer-height});
+          height: -moz-calc(100vh - #{$header-footer-height});
+          height: -webkit-calc(100vh - #{$header-footer-height});
         }
     }
 
     board-column {
-        height: 100%;
         display: flex;
         flex-direction: column;
         width: 100%;
-        max-height: 100%;
+        min-height: 0; /* min-height to prevent overflowing */
 
         // Alerts column
         &[data-size="fixed-right"]{
@@ -144,7 +146,6 @@ tile-container{
 
         &[data-count-y="4"]{
             tile-container {
-                //max-height: 25%;
                 min-height: 20%;
             }
         }
@@ -154,10 +155,7 @@ tile-container{
         display: flex;
         flex-basis: auto;
         width: 100%;
-
-        board-column {
-            width: 100%;
-        }
+        min-height: 0; /* min-height to prevent overflowing */
 
         &[data-size="l"],
         &[data-size="fixed-right"] {
@@ -194,6 +192,8 @@ tile-container{
 
         &.with-footer {
           height: calc(100vh - #{$header-footer-height-xxl});
+          height: -moz-calc(100vh - #{$header-footer-height-xxl});
+          height: -webkit-calc(100vh - #{$header-footer-height-xxl});
         }
     }
 
